<resources>
    <string name="app_name">MizuFace</string>
    <string name="link_state_icon">Link state icon</string>
    <string name="retry_button">retry button</string>
    <string name="idle_rectangle">Idle Rectangle</string>
    <string name="change_camera">Change Camera</string>
    <string name="hide_camera_preview">Hide the Camera Preview</string>
    <string name="blendshape_list_preview">Blenshape List Preview</string>
    <string name="default_phone_ip_address">192.168.1.3 : 49983</string>
    <string name="blendshapes">Blendshapes</string>

    <string name="permission_title">Camera Permission Required</string>
    <string name="permission_explanation">This app requires camera permission to track your facial expressions and movements for the VTuber functionality. Without camera access, the app cannot work.</string>
    <string name="grant_camera_permission">Grant Camera Permission</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>

    <string name="blendshape_name">Name</string>
    <string name="blendshape_min_value">Min Value</string>
    <string name="blendshape_max_value">Max Value</string>
    <string name="blendshape_weight">Weight</string>
    <string name="blendshape_zero">0</string>
    <string name="blendshape_one">1</string>

    <string name="edit_ip_address">Edit IP Address</string>
    <string name="edit_weight_for">Edit Weight for %1$s</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="invalid_ip_address_format">Invalid IP address format</string>
    <string name="blendshape_weight_not_valid">Blendshape Wight Not Valid</string>
    <string name="unknown_ip">Unknown IP</string>
    <string name="phone_ip_state">%1$s : %2$s</string>

    <string name="permissions_fragment_label">PermissionsFragment</string>
    <string name="vtuber_pc_fragment_label">VtuberPCFragment</string>
    <string name="loading">Loading...</string>

    <string name="state_connected">Connected</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_scanning">Scanning</string>

    <string name="tracking">Tracking</string>
    <string name="nav_separator">|</string>
    <string name="controls">Controls</string>
    <string name="tracking_settings_panel">Tracking Settings Panel</string>
    <string name="tracking_control_panel">Tracking Control Panel</string>
    <string name="surprise">Surprise</string>
    <string name="angry">Angry</string>
    <string name="sad">Sad</string>
    <string name="happy">Happy</string>
    <string name="auto_blink">Auto Blink</string>
    <string name="track_eyes">Track Eyes</string>
    <string name="tracking_on_off">Tracking On/Off</string>
    <string name="more_settings">More Settings</string>
</resources>