<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vtuber_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/color_app_background_dark">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:keepScreenOn="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/pc_link_state"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:contentDescription="@string/link_state_icon"
                app:srcCompat="@drawable/unlink" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/state_disconnected"
                android:textColor="@color/color_text_dark"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="FPS: "
                    android:textColor="@color/color_text_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fpsCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textColor="@color/color_text_dark"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/refreshButton"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:background="@android:color/transparent"

                android:contentDescription="@string/retry_button"
                android:minWidth="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/refreshalt" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/idle_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="15dp">

            <androidx.camera.view.PreviewView
                android:id="@+id/view_finder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:implementationMode="compatible" />


            <ImageView
                android:id="@+id/camCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/idle_rectangle"
                android:visibility="invisible"
                app:srcCompat="@drawable/cam_cover" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/changeCamera"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/change_camera"
                    app:srcCompat="@android:drawable/ic_popup_sync" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/hidePreview"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/hide_camera_preview"
                    app:srcCompat="@android:drawable/ic_menu_view" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/blend_shape_preview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:orientation="horizontal">

                        <com.amoherom.mizuface.fragment.SelectableText
                            android:id="@+id/ControlsSelector"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/controls"
                            android:textColor="@color/color_text_dark"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12sp"
                            android:text="@string/nav_separator"
                            android:textColor="@color/color_text_dark"
                            android:textSize="18sp" />

                        <com.amoherom.mizuface.fragment.SelectableText
                            android:id="@+id/BlendshapeSelector"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/blendshapes"
                            android:textColor="@color/color_text_dark"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12sp"
                            android:text="@string/nav_separator"
                            android:textColor="@color/color_text_dark"
                            android:textSize="18sp" />

                        <com.amoherom.mizuface.fragment.SelectableText
                            android:id="@+id/TrackingSelector"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tracking"
                            android:textColor="@color/color_text_dark"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>

                <ScrollView
                    android:id="@+id/controlPanelView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/tracking_control_panel">

                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:flexWrap="wrap"
                        app:alignContent="center"
                        app:alignItems="center">

                        <ImageButton
                            android:id="@+id/powerButton"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:contentDescription="@string/tracking_on_off"
                            app:srcCompat="@drawable/power"
                            android:background="@drawable/rounded_bg"
                            android:layout_margin="5dp"/>

                        <Button
                            android:id="@+id/eye_track"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:text="@string/track_eyes"
                            android:background="@drawable/rounded_bg"
                            android:layout_margin="5dp"/>

                        <Button
                            android:id="@+id/fcl_blink"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:text="@string/auto_blink"
                            android:background="@drawable/rounded_bg"
                            android:layout_margin="5dp" />

                        <Button
                            android:id="@+id/exp_happy"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:text="@string/happy"
                            android:background="@drawable/rounded_bg"
                            android:layout_margin="5dp"
                            app:backgroundTint="@null"/>

                        <Button
                            android:id="@+id/exp_sad"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:text="@string/sad"
                            android:background="@drawable/rounded_bg"
                            android:layout_margin="5dp"
                            app:backgroundTint="@null"/>

                        <Button
                            android:id="@+id/exp_angry"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:text="@string/angry"
                            android:background="@drawable/rounded_bg"
                            android:layout_margin="5dp"
                            app:backgroundTint="@null"/>

                        <Button
                            android:id="@+id/exp_surprise"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:text="@string/surprise"
                            android:background="@drawable/rounded_bg"
                            android:layout_margin="5dp"
                            app:backgroundTint="@null"/>


                    </com.google.android.flexbox.FlexboxLayout>

                </ScrollView>



                <ScrollView
                    android:id="@+id/blendshapeScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:contentDescription="@string/blendshape_list_preview">

                    <LinearLayout
                        android:id="@+id/blendshapeList"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="10dp"
                        android:orientation="vertical"
                        android:paddingBottom="60dp"
                        android:showDividers="middle" />
                </ScrollView>

                <ScrollView
                    android:id="@+id/trackingSettingsView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:contentDescription="@string/tracking_settings_panel">

                </ScrollView>
            </LinearLayout>
        </FrameLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>