<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_bg"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/blendshapeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:text="@string/blendshape_name"
            android:textSize="20sp"
            android:textColor="@color/color_text_dark"/>



        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blendshape_min_value"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/color_placeholder_text_dark"
                    android:labelFor="@id/blendshapeMin"/>

                <EditText
                    android:id="@+id/blendshapeMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/blendshape_zero"
                    android:textColor="@color/color_text_dark"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blendshape_max_value"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/color_placeholder_text_dark"
                    android:labelFor="@id/blendshapeMax"/>

                <EditText
                    android:id="@+id/blendshapeMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/blendshape_one"
                    android:textColor="@color/color_text_dark"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blendshape_weight"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/color_placeholder_text_dark"
                    android:labelFor="@id/blendshapeWeight"/>

                <EditText
                    android:id="@+id/blendshapeWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/blendshape_one"
                    android:textColor="@color/color_text_dark"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/blendshapeProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:indeterminate="false"
            android:progress="50"
            android:progressDrawable="@drawable/rounded_progress"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
