<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/color_app_background_dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="118dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mizu_face_logo" />

    <TextView
        android:id="@+id/text_permission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/color_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/text_permission_explanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.07999998"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_permission_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/permission_explanation"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="visible"
        android:textColor="@color/color_secondary_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/button_request_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_permission_title" />

    <Button
        android:id="@+id/button_request_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grant_camera_permission"
        android:background="@drawable/button_bg"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/logo_mizu_face" />

</androidx.constraintlayout.widget.ConstraintLayout>
